--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.OfflineUserDirectory">
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.offlineuserdirectory.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.OfflineUserDirectory">
